<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerLayout"
    tools:context=".AddMovieActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="800dp"
        android:orientation="vertical">

        <include
            android:id="@+id/include"
            layout="@layout/toolbar" />


        <ImageView
            android:id="@+id/IV_PreviewImage"
            android:layout_width="395dp"
            android:layout_height="500dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="65dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:src="@drawable/baseline_add_28"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/IV_PreviewImage"
            app:layout_constraintEnd_toEndOf="@+id/IV_PreviewImage"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/IV_PreviewImage"
            app:layout_constraintTop_toTopOf="@+id/IV_PreviewImage"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_delete_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:src="@drawable/baseline_remove_24"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/IV_PreviewImage"
            app:layout_constraintEnd_toEndOf="@+id/IV_PreviewImage"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/IV_PreviewImage"
            app:layout_constraintTop_toTopOf="@+id/IV_PreviewImage"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/title_input_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:hint="@string/enter_movie_name"
            android:maxLines="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.146"
            app:layout_constraintStart_toStartOf="@+id/IV_PreviewImage"
            app:layout_constraintTop_toBottomOf="@+id/IV_PreviewImage"
            app:layout_constraintVertical_bias="0.049" />

        <EditText
            android:id="@+id/description_input_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="40dp"
            android:hint="@string/enter_movie_description"
            android:maxLines="3"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/IV_PreviewImage"
            app:layout_constraintTop_toBottomOf="@+id/IV_PreviewImage"
            app:layout_constraintVertical_bias="0.285" />

        <TextView
            android:id="@+id/tv_selectedDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="40dp"
            android:hint="@string/label_select_a_date"
            android:padding="2dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btn_datePicker"
            app:layout_constraintEnd_toEndOf="@+id/description_input_edit"
            app:layout_constraintStart_toStartOf="@+id/description_input_edit"
            app:layout_constraintTop_toBottomOf="@+id/description_input_edit" />

        <TextView
            android:id="@+id/tv_selectedDate_edit"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="150dp"
            android:hint="@string/selected_date"
            android:padding="2dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_selectedDate"
            app:layout_constraintTop_toBottomOf="@+id/tv_selectedDate" />

        <Button
            android:id="@+id/btn_datePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="56dp"
            android:src="@drawable/baseline_add_28"
            android:text="@string/add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/tv_selectedDate_edit"
            app:layout_constraintTop_toBottomOf="@+id/description_input_edit" />

        <ImageView
            android:id="@+id/iv_bookmark_false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_bookmark_border_24"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="@+id/include"
            app:layout_constraintTop_toTopOf="@+id/edit_button" />

        <ImageView
            android:id="@+id/iv_bookmark_true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bookmark_"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/edit_button"
            app:layout_constraintStart_toStartOf="@+id/include"
            app:layout_constraintTop_toTopOf="@+id/edit_button" />

        <TextView
            android:id="@+id/bookmark_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="100px"
            app:layout_constraintBottom_toBottomOf="@+id/edit_button"
            app:layout_constraintEnd_toStartOf="@+id/edit_button"
            app:layout_constraintStart_toEndOf="@+id/iv_bookmark_false"
            app:layout_constraintTop_toTopOf="@+id/edit_button" />

        <Button
            android:id="@+id/edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="@+id/delete_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/delete_button" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:text="@string/delete"
            app:layout_constraintBottom_toTopOf="@+id/IV_PreviewImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_gravity="start">

        <include layout="@layout/nav_drawer" />

    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>