<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:id="@+id/toolbar"
    android:background="#5D6BED"
    android:gravity="center_vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/menu"
        android:src="@drawable/baseline_menu_24"/>


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Movies App"
        android:textSize="20sp"
        android:layout_marginStart="12dp"
        android:textColor="@color/black"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/open_settings"
        android:src="@drawable/baseline_settings_24_toolbar" />



</LinearLayout>